<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhengtu@todo.todo">zhengtu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>OpenCV</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>global_user</depend>
  <depend>global_interface</depend>

  <!-- <depend>InferenceEngine</depend> -->
  <depend>OpenVINO</depend>
  <depend>Ceres</depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
