<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buff_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1441488761@qq.com">zhengtu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>OpenVINO</depend>
  <depend>Eigen3</depend>
  <depend>Ceres</depend>
  <depend>yaml-cpp</depend>
  <depend>global_interface</depend>
  <depend>global_user</depend>
  <depend>filter</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
